@@ -1,3 +1,8 @@
+2017-08-23  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/86863
+	* gfortran.dg/submodule_32.f08: New test.
+
 2018-08-22  Janus Weil  <janus@gcc.gnu.org>
 
 	PR fortran/86935
